Clarify .gitignore Comment on Environment Normalization
I kept misreading this for some reason. Consider 
removing the line of things that *shouldn't* be ignored 
from the file if confusion continues.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /.bundle
 /vendor/bundle
 
-# these should all be checked in to normalise the environment:
+# NOTE: these should all be checked in to normalise the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
 
 # Ignore all logfiles and tempfiles.
