RuboCop: Allow Regex Inner Slashes

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -114,6 +114,10 @@ Style/NumericLiteralPrefix:
     - zero_with_o
     - zero_only
 
+Style/RegexpLiteral:
+  EnforcedStyle: slashes
+  AllowInnerSlashes: true
+
 Style/StringLiterals:
   Description: Checks if uses of quotes match the configured preference.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#consistent-string-literals
