--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,97 +8,26 @@ AllCops:
     - 'db/schema.rb'
     - 'db/seeds.rb'
     - 'db/migrate/*'
-    # - 'config/initializers/generators.rb'
-
-Metrics/ClassLength:
-  Description: Avoid classes longer than 100 lines of code.
-  Enabled: true
-  CountComments: false
-  Max: 100
 
 Metrics/LineLength:
-  Description: Limit lines to 80 characters.
+  Description: Limit lines to 100 characters.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#80-character-limits
-  Enabled: false
+  Enabled: true
   Max: 100
   AllowURI: true
+  Exclude:
+    - config/**/*.rb
+    - spec/views/**/*.rb
   URISchemes:
-  - http
-  - https
-
-Metrics/MethodLength:
-  Description: Avoid methods longer than 10 lines of code.
-  StyleGuide: https://github.com/bbatsov/ruby-style-guide#short-methods
-  Enabled: true
-  CountComments: false
-  Max: 15
-
-Metrics/ModuleLength:
-  Description: Avoid modules longer than 100 lines of code.
-  Enabled: true
-  CountComments: false
-  Max: 100
-  Exclude:
-  - spec/support/features/form_helpers.rb
-
-Rails/HasAndBelongsToMany:
-  Description: Prefer has_many :through to has_and_belongs_to_many.
-  Enabled: true
-  Exclude:
-  - app/models/service.rb
-  - app/models/category.rb
-
-Rails/ScopeArgs:
-  Description: Checks the arguments of ActiveRecord scopes.
-  Enabled: true
-  Exclude:
-  - app/models/concerns/search.rb
-  Include:
-  - app/models/**/*.rb
-
-Rails/TimeZone:
-  # The value `strict` means that `Time` should be used with `zone`.
-  # The value `flexible` allows usage of `in_time_zone` instead of `zone`.
-  Enabled: true
-  EnforcedStyle: flexible
-  SupportedStyles:
-    - strict
-    - flexible
-
-Style/AndOr:
-  Description: Use &&/|| instead of and/or.
-  StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-and-or-or
-  Enabled: true
-  EnforcedStyle: conditionals
-  SupportedStyles:
-  - always
-  - conditionals
+    - http
+    - https
 
 Style/Documentation:
   Description: Document classes and non-namespace modules.
   Enabled: false
 
-Style/DotPosition:
-  Description: Checks the position of the dot in multi-line method calls.
-  StyleGuide: https://github.com/bbatsov/ruby-style-guide#consistent-multi-line-chains
-  Enabled: true
-  EnforcedStyle: trailing
-  SupportedStyles:
-  - leading
-  - trailing
-
-Style/ExtraSpacing:
-  Description: Do not use unnecessary spacing.
-  Enabled: false
-
 Style/FrozenStringLiteralComment:
   Enabled: false
-
-Style/GuardClause:
-  Description: Check for conditionals that can be replaced with guard clauses
-  StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-nested-conditionals
-  Enabled: true
-  MinBodyLength: 3
 
 Style/IndentHash:
   EnforcedStyle: consistent
@@ -108,21 +37,12 @@ Style/IndentHash:
     - align_braces
   IndentationWidth: ~
 
-Style/NumericLiteralPrefix:
-  EnforcedOctalStyle: zero_with_o
-  SupportedOctalStyles:
-    - zero_with_o
-    - zero_only
-
 Style/RegexpLiteral:
   EnforcedStyle: slashes
   AllowInnerSlashes: true
 
-Style/StringLiterals:
-  Description: Checks if uses of quotes match the configured preference.
-  StyleGuide: https://github.com/bbatsov/ruby-style-guide#consistent-string-literals
-  Enabled: true
-  EnforcedStyle: single_quotes
-  SupportedStyles:
-  - single_quotes
-  - double_quotes
+# Style/GuardClause:
+#   Description: Check for conditionals that can be replaced with guard clauses
+#   StyleGuide: https://github.com/bbatsov/ruby-style-guide#no-nested-conditionals
+#   Enabled: true
+#   MinBodyLength: 3 # 1 is the default
