Update Rubocop Style Rules for (1) Hash Arguments  (2) Multi-Line Calls
1) If you're enforcing no hash braces when passed as 
method arguments and you have more than one hash 
arg (don't do this, but some gems do) then you can't tell 
one hash arg from the next. Enforcing the "context_dependent" style requires braces for multiple 
hash args.

2) Just a style preference. This is what I've been doing 
with multi-line method calls for ages, and got tired of 
Rubocop's complaints.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,12 @@ Style/IndentHash:
     - align_braces
   IndentationWidth: ~
 
+Style/AlignParameters:
+  EnforcedStyle: with_fixed_indentation
+
+Style/BracesAroundHashParameters:
+  EnforcedStyle: context_dependent
+
 Style/RegexpLiteral:
   EnforcedStyle: slashes
   AllowInnerSlashes: true
